--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+  @tailwind components;
+  @tailwind utilities;
+  
+@layer components {
+  .product-carousel {
+    @apply hidden md:overflow-hidden md:max-w-full max-w-[320px] items-center md:grid grid-cols-1 md:grid-cols-3 gap-12 md:gap-24 mt-12
   }
+  .overlay {
+    @apply fixed overflow-hidden left-0 top-0 w-full h-screen z-[10] bg-black/50
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
 }
